# Project_books1

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirement.txt  requirements.txt
Project_books/: asgi.py  settings.py  urls.py  wsgi.py
books/: admin.py  models.py  serializers.py  views.py
books/migrations/: 0001_initial.py  0002_alter_books_author_alter_books_description_readers.py  0003_rename_is_creation_author_created_at_and_more.py  0004_remove_author_created_at_remove_author_edited_at_and_more.py
fixtures/: author.json  books.json  readers.json
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_books.py  0003_alter_user_options_remove_user_books_and_more.py
