[tool.poetry]
name = "project-books"
version = "0.1.0"
description = ""
authors = ["Wigor74 <Wigor74@ya.ru>"]
readme = "README.md"
packages = [{include = "project_books"}]

[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
